@@ -34,6 +34,14 @@
                 "extra": ""
             },
             {
+                "field": "repeat_number",
+                "type": "int(11)",
+                "null": "NO",
+                "key": "",
+                "default": "1",
+                "extra": ""
+            },
+            {
                 "field": "position",
                 "type": "int(11)",
                 "null": "NO",
@@ -263,6 +271,14 @@
             },
             {
                 "field": "from_email_ac",
+                "type": "tinyint(4)",
+                "null": "NO",
+                "key": "",
+                "default": null,
+                "extra": ""
+            },
+            {
+                "field": "user_mail_as_sender",
                 "type": "tinyint(4)",
                 "null": "NO",
                 "key": "",
@@ -585,6 +601,14 @@
                 "null": "NO",
                 "key": "",
                 "default": null,
+                "extra": ""
+            },
+            {
+                "field": "repeat_number",
+                "type": "int(11)",
+                "null": "NO",
+                "key": "",
+                "default": "1",
                 "extra": ""
             },
             {
@@ -1437,6 +1461,14 @@
             },
             {
                 "field": "last_msg_id",
+                "type": "int(11)",
+                "null": "NO",
+                "key": "",
+                "default": null,
+                "extra": ""
+            },
+            {
+                "field": "wait_timeout_repeat",
                 "type": "int(11)",
                 "null": "NO",
                 "key": "",
