@@ -32,7 +32,7 @@ if (is_object($chat) && $chat->hash == $Params['user_parameters']['hash'])
 		while (true) {
 			
 			// Auto responder
-			if ($chat->status == erLhcoreClassModelChat::STATUS_PENDING_CHAT && $chat->wait_timeout_send == 0 && $chat->wait_timeout > 0 && !empty($chat->timeout_message) && (time() - $chat->time) > $chat->wait_timeout) {
+			if ($chat->status == erLhcoreClassModelChat::STATUS_PENDING_CHAT && $chat->wait_timeout_send <= 0 && $chat->wait_timeout > 0 && !empty($chat->timeout_message) && (time() - $chat->time) > ($chat->wait_timeout*($chat->wait_timeout_repeat-(abs($chat->wait_timeout_send))))) {
 				erLhcoreClassChatWorkflow::timeoutWorkflow($chat);
 			}
 		
